Changes texts and images into km service relevant stuff

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
 	<body>
 		<header>
 			<div class="container">
-				<h1 class="company-name"><a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/logo.svg" alt="Urban" width="150"></a></h1>
+				<h1 class="company-name"><a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/logo.png" alt="Urban" width="150"></a></h1>
 				{% include navigation.html %}
 			</div>
 		</header>
@@ -69,8 +69,6 @@
 			<div class="legal-line">
 				<p class="container">
 					&copy; {{ site.time | date: '%Y' }} {{ site.data.company.title }}
-					&bull;
-					Template by <a href="http://cloudcannon.com/">CloudCannon</a>
 				</p>
 			</div>
 		</footer>
