--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,7 +27,7 @@ layout: page
 
 <section class="diagonal alternate">
 	<div class="text-container">
-		<h2>Next post</h2>
+		<h2>Næste indlæg</h2>
 		<div class="blog-post">
 			{% if page.next %}
 				{% include post-summary.html post=page.next %}
